# cmlibs.importer

./: .gitignore  README.rst  pyproject.toml  setup.py
.github/workflows/: deploy.yaml
docs/: conf.py  index.rst
src/cmlibs/importer/: celldensity.py  pointcloud.py  pointpare.py  webgl.py
src/opencmiss/importer/: base.py  colonhrm.py  colonmanometry.py  errors.py  main.py  mbfxml.py  ragpdata.py  trimesh.py
tests/: test_celldensity.py  test_colonhrm.py  test_colonmanometry.py  test_mbfxml.py  test_pointcloud.py  test_ragpdata.py  test_trimesh_based.py  test_webgl.py  test_xyz.py  test_xyzvalue.py
tests/resources/: cell_density.csv  colon_manometry.csv  colon_manometry_small.csv  gene_locations.xml  gene_v_location.csv  hrm_stim_colon.txt  mbf_contours.xml  plain_text.txt  point_cloud_1.csv  point_cloud_2.csv  point_cloud_3.csv  point_cloud_4.csv  small_point_cloud_with_labels.txt  webgl_contours.json  webgl_contours_missed_repeats.json  webgl_contours_separate.json  webgl_contours_small.json  wrench.dxf  xyz_1.txt  xyz_2.txt  xyz_value_header.txt  xyz_value_header_bad_value.txt  xyz_value_headerless.txt
