[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "cmlibs.importer"
dynamic = ["version"]
keywords = ["Import", "CMLibs", "Zinc"]
readme = "README.rst"
license = "Apache-2.0"
authors = [
    { name="Hugh Sorby", email="h.sorby@auckland.ac.nz" },
]
dependencies = [
    'cmlibs.zinc',
    'pointpare',
]
description = "Import a variety of formats to CMLibs Zinc."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Homepage = "https://cmlibs.org"
Repository = "https://github.com/CMLibs-Python/cmlibs.importer"

[project.optional-dependencies]
common = ["trimesh", "Shapely"]
svg = ["trimesh", "svg.path", "lxml"]
mbfxml = ["mbfxml2ex"]

[tool.setuptools_scm]
